
        zope.interface.common.interfaces.IException
        zope.publisher.interfaces.INotFound
        zope.security.interfaces.IForbidden
        zope.security.interfaces.IUnauthorized

        Note that the name has to be 'index.html' for the exception
        view to work. (patch by Sidnei da Silva from Enfold,
        integration by Martijn Faassen (Startifact) for Infrae)

    Bugs Fixed

      - "version.txt" file was being written to the wrong place by the
        Makefile, causing Zope to report "unreleased version" even for
        released versions.

      - Collector #1306: Missing acquisition context on local roles screen.

      - Collector #2153: Supporting unquoted cookies with spaces.

      - The REQUEST no longer accepts holds after it has been closed.

      - Five.browser.metaconfigure.page didn't protect names from interface
        superclasses (http://www.zope.org/Collectors/Zope/2333)

      - Fixed bug in ZPublisher.BaseRequest with persistent site managers.
        An EndRequestEvent was thrown after the ZODB connection was already
        closed and thus the site manager not being available anymore.

      - Collector #2295: Comments in PythonScripts could lead to syntax
        errors

      - Collector #1441: WebDAV compatibility with Windows Web Folders
        restored by adding a configuration variable that controls the
        sending of the non-standard MS-Author-Via and Public
        headers. Thanks for PatrickD for the the hard work coming up
        with an initial patch.  
        (http://zope.org/Collectors/Zope/1441)

      - DAV: litmus "notowner_modify" tests warn during a MOVE request
        because we returned "412 Precondition Failed" instead of "423
        Locked" when the resource attempting to be moved was itself
        locked.  Fixed by changing Resource.Resource.MOVE to raise the
        correct error.

      - DAV: litmus props tests 19: propvalnspace and 20: